Implement service key encryption for users' security.