@@ -8,6 +8,7 @@ import org.rsbot.script.internal.ScriptHandler;
 import org.rsbot.script.internal.event.ScriptListener;
 import org.rsbot.script.methods.Environment;
 import org.rsbot.script.util.WindowUtil;
+import org.rsbot.service.ScriptBoxSource;
 import org.rsbot.util.GlobalConfiguration;
 import org.rsbot.util.Minimizer;
 import org.rsbot.util.ScreenshotUtil;
@@ -46,7 +47,11 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 	private List<Bot> bots = new ArrayList<Bot>();
 	private boolean showAds = true;
 	private boolean disableConfirmationMessages = false;
-	private String serviceKey;
+	private static ScriptBoxSource.Credentials serviceKey = new ScriptBoxSource.Credentials();
+
+	static {
+		serviceKey.key = "";
+	}
 
 	public BotGUI() {
 		init();
@@ -120,16 +125,7 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 					showScriptSelector(current);
 				}
 			} else if (option.equals("Service Key")) {
-				serviceKey = (String) JOptionPane.showInputDialog(this, null,
-				                                                  option, JOptionPane.QUESTION_MESSAGE, null, null,
-				                                                  serviceKey);
-				if (serviceKey == null || serviceKey.length() == 0) {
-					log.info("Services have been disabled");
-				} else if (serviceKey.length() != 40) {
-					log.warning("Invalid service key");
-				} else {
-					log.info("Services have been linked to {0}");
-				}
+				serviceKeyQuery(option);
 			} else if (option.equals("Stop Script")) {
 				Bot current = getCurrentBot();
 				if (current != null) {
@@ -161,8 +157,7 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 			} else if (option.equals("Save Screenshot")) {
 				Bot current = getCurrentBot();
 				if (current != null) {
-					ScreenshotUtil.saveScreenshot(current, current
-							.getMethodContext().game.isLoggedIn());
+					ScreenshotUtil.saveScreenshot(current, current.getMethodContext().game.isLoggedIn());
 				}
 			} else if (option.equals("Exit")) {
 				cleanExit();
@@ -293,7 +288,20 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 		}
 	}
 
-	public String getServiceKey() {
+	private void serviceKeyQuery(String option) {
+		serviceKey.key = (String) JOptionPane.showInputDialog(this, null,
+		                                                      option, JOptionPane.QUESTION_MESSAGE, null, null,
+		                                                      serviceKey.key);
+		if (serviceKey == null || serviceKey.key.length() == 0) {
+			log.info("Services have been disabled");
+		} else if (serviceKey.key.length() != 40) {
+			log.warning("Invalid service key");
+		} else {
+			log.info("Services have been linked to {0}");
+		}
+	}
+
+	public static ScriptBoxSource.Credentials getServiceKey() {
 		return serviceKey;
 	}
 
@@ -362,14 +370,16 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 	}
 
 	private void showScriptSelector(Bot bot) {
-		if (AccountManager.getAccountNames().length == 0) {
+		if (serviceKey == null || serviceKey.key == null || serviceKey.key.length() != 40) {
+			JOptionPane.showMessageDialog(this, "Please enter your service key before using the bot.");
+			serviceKeyQuery("Service Key");
+		} else if (AccountManager.getAccountNames() == null || AccountManager.getAccountNames().length == 0) {
 			JOptionPane
-					.showMessageDialog(this,
-					                   "No accounts found! Please create one before using the bot.");
+					.showMessageDialog(this, "No accounts found! Please create one before using the bot.");
 			AccountManager.getInstance().showGUI();
 		} else if (bot.getMethodContext() == null) {
-			JOptionPane.showMessageDialog(this,
-			                              "The client is not currently loaded!");
+			JOptionPane.showMessageDialog(this, "The client is not currently loaded!");
+
 		} else {
 			new ScriptSelector(this, bot).showGUI();
 		}
@@ -383,11 +393,9 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 			Script s = running.get(id);
 			ScriptManifest prop = s.getClass().getAnnotation(
 					ScriptManifest.class);
-			int result = JOptionPane.showConfirmDialog(this,
-			                                           "Would you like to stop the script " + prop.name() + "?",
+			int result = JOptionPane.showConfirmDialog(this, "Would you like to stop the script " + prop.name() + "?",
 			                                           "Script", JOptionPane.OK_CANCEL_OPTION,
 			                                           JOptionPane.QUESTION_MESSAGE);
-
 			if (result == JOptionPane.OK_OPTION) {
 				sh.stopScript(id);
 				toolBar.setScriptButton(BotToolBar.RUN_SCRIPT);
@@ -417,9 +425,8 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 			}
 		});
 
-		setIconImage(GlobalConfiguration.getImage(
-				GlobalConfiguration.Paths.Resources.ICON,
-				GlobalConfiguration.Paths.ICON));
+		setIconImage(
+				GlobalConfiguration.getImage(GlobalConfiguration.Paths.Resources.ICON, GlobalConfiguration.Paths.ICON));
 
 		JPopupMenu.setDefaultLightWeightPopupEnabled(false);
 
@@ -438,8 +445,7 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 		toolBar.setHome(true);
 		menuBar.setBot(null);
 		setJMenuBar(menuBar);
-		textScroll = new JScrollPane(TextAreaLogHandler.TEXT_AREA,
-		                             JScrollPane.VERTICAL_SCROLLBAR_ALWAYS,
+		textScroll = new JScrollPane(TextAreaLogHandler.TEXT_AREA, JScrollPane.VERTICAL_SCROLLBAR_ALWAYS,
 		                             JScrollPane.HORIZONTAL_SCROLLBAR_NEVER);
 		textScroll.setBorder(null);
 		textScroll.setPreferredSize(new Dimension(PANEL_WIDTH, LOG_HEIGHT));
@@ -463,8 +469,7 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 					toolBar.setOverrideInput(false);
 					menuBar.setOverrideInput(false);
 					String acct = bot.getAccountName();
-					toolBar.setTabLabel(bots.indexOf(bot) + 1,
-					                    acct == null ? "RuneScape" : acct);
+					toolBar.setTabLabel(bots.indexOf(bot) + 1, acct == null ? "RuneScape" : acct);
 					toolBar.updateInputButton();
 					setTitle(acct);
 				}
@@ -475,8 +480,7 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 	public void scriptStopped(ScriptHandler handler, Script script) {
 		Bot bot = handler.getBot();
 		if (bot == getCurrentBot()) {
-			bot.inputFlags = Environment.INPUT_KEYBOARD
-					| Environment.INPUT_MOUSE;
+			bot.inputFlags = Environment.INPUT_KEYBOARD | Environment.INPUT_MOUSE;
 			bot.overrideInput = false;
 			toolBar.setScriptButton(BotToolBar.RUN_SCRIPT);
 			toolBar.setInputState(bot.inputFlags);
@@ -515,22 +519,17 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 		try {
 			if (os == GlobalConfiguration.OperatingSystem.MAC) {
 				Class<?> fileMgr = Class.forName("com.apple.eio.FileManager");
-				Method openURL = fileMgr.getDeclaredMethod("openURL",
-				                                           new Class[]{String.class});
+				Method openURL = fileMgr.getDeclaredMethod("openURL", new Class[]{String.class});
 				openURL.invoke(null, url);
 			} else if (os == GlobalConfiguration.OperatingSystem.WINDOWS) {
-				Runtime.getRuntime().exec(
-						"rundll32 url.dll,FileProtocolHandler " + url);
+				Runtime.getRuntime().exec("rundll32 url.dll,FileProtocolHandler " + url);
 			} else { // assume Unix or Linux
-				String[] browsers = {"firefox", "opera", "konqueror",
-				                     "epiphany", "mozilla", "netscape", "google-chrome",
-				                     "chromium-browser"};
+				String[] browsers = {"firefox", "opera", "konqueror", "epiphany", "mozilla", "netscape",
+				                     "google-chrome", "chromium-browser"};
 				String browser = null;
 				for (int count = 0; (count < browsers.length)
 						&& (browser == null); count++) {
-					if (Runtime.getRuntime().exec(
-							new String[]{"which", browsers[count]})
-					           .waitFor() == 0) {
+					if (Runtime.getRuntime().exec(new String[]{"which", browsers[count]}).waitFor() == 0) {
 						browser = browsers[count];
 					}
 				}
@@ -547,8 +546,7 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 
 	private boolean confirmRemoveBot() {
 		if (!disableConfirmationMessages) {
-			int result = JOptionPane.showConfirmDialog(this,
-			                                           "Are you sure you want to close this bot?", "Close Bot",
+			int result = JOptionPane.showConfirmDialog(this, "Are you sure you want to close this bot?", "Close Bot",
 			                                           JOptionPane.OK_CANCEL_OPTION, JOptionPane.QUESTION_MESSAGE);
 			return (result == JOptionPane.OK_OPTION);
 		} else {
@@ -562,13 +560,12 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 			if (bots.size() == 1) {
 				message = "You have a bot open. Are you sure you want to exit?";
 			} else if (bots.size() > 1) {
-				message = "You have " + Integer.toString(bots.size())
-						+ " bots open. Are you sure you want to exit?";
+				message = "You have " + Integer.toString(bots.size()) + " bots open. Are you sure you want to exit?";
 			} else {
 				System.exit(0);
 			}
-			int result = JOptionPane.showConfirmDialog(this, message, "Exit",
-			                                           JOptionPane.OK_CANCEL_OPTION, JOptionPane.QUESTION_MESSAGE);
+			int result = JOptionPane.showConfirmDialog(this, message, "Exit", JOptionPane.OK_CANCEL_OPTION,
+			                                           JOptionPane.QUESTION_MESSAGE);
 			if (result == JOptionPane.OK_OPTION) {
 				System.exit(0);
 				return true;
